force-app/main/default/objects/phsCheckOutConversation__c/phsCheckOutConversation__c.object-meta.xml
<CustomObject>
    <label>phsCheckOutConversation</label>
    <nameField>
        <label>phsCheckOutConversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCheckOutConversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>