force-app/main/default/objects/phsCheckOutConversation__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>phsCoachcheckOutQuestions__c</referenceTo>
    <relationshipLabel>phsCheckOutConversations</relationshipLabel>
    <relationshipName>phsCheckOutConversations</relationshipName>
    <type>Lookup</type>
</CustomField>