force-app/main/default/objects/phsCheckOutConversation__c/fields/Question_Date__c.field-meta.xml
<CustomField>
    <fullName>Question_Date__c</fullName>
    <label>Question Date</label>
    <type>DateTime</type>
</CustomField>